fixed overflow issue

--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -48,6 +48,7 @@ header {
 
 .try-mobile {
   margin-bottom: 1rem;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 600px) {
